--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         </div>
       </header>
 
-      <div class="content">
-        <div class="staff">
+      <main class="content">
+        <section class="staff">
           <!-- --------------------------------------------------------------- -->
           <!--        Não remova o comentário até a etapa final do projeto            -->
           <!-- --------------------------------------------------------------- -->
@@ -129,8 +129,8 @@
             </div>
           </li>
         </ul>-->
-        </div>
-      </div>
+        </section>
+      </main>
     </div>
   </body>
 </html>
