--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           />
           <ul class="nav__links">
             <li>
-              <a class="nav__link">Escolhas da Equipe</a>
+              <a class="nav__link" href="#staff">Escolhas do leitor</a>
             </li>
             <li>
               <a class="nav__link">Eventos</a>
@@ -43,7 +43,6 @@
               lugar legal para estudantes legais!
             </p>
           </div>
-
           <img
             src="./images/inside_the_library.png"
             alt="Ilustração 'Dentro da biblioteca'"
@@ -56,79 +55,99 @@
       </header>
 
       <main class="content">
-        <section class="staff">
-          <!-- --------------------------------------------------------------- -->
-          <!--        Não remova o comentário até a etapa final do projeto            -->
-          <!-- --------------------------------------------------------------- -->
-          <!--<h2 class="staff__title">Escolhas da Equipe</h2>
-        <p class="staff__subtitle">Que nossos leitores adoram</p>
-        <ul>
-          <li class="card">
-            <div class="card__content">
-              <h3 class="card__title">Algoritmos: Teoria e Prática</h3>
-              <p class="card__text">
-                Esse livro é uma introdução
-                adequada aos algoritmos! Introdução aos algoritmos, ou CLRS,
-                em referência aos sobrenomes dos autores, aprofunda e
-                abrange uma variedade de algoritmos em vários
-                capítulos independentes.
-              </p>
-              <p class="card__footer">
-                Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest,
-                Clifford Stein
-              </p>
-            </div>
-          </li>
+        <section class="staff" id="staff">
+          <h2 class="staff__title">Escolhas do leitor</h2>
+          <p class="staff__subtitle">Que nossos leitores adoram</p>
+          <ul class="staff__cards">
+            <li class="card">
+              <div class="card__content">
+                <h3 class="card__title">O Poder da Autorresponsabilidade</h3>
+                <p class="card__text">
+                  É um livro que explora como assumir total responsabilidade por
+                  nossas ações e escolhas pode transformar nossas vidas. O autor
+                  apresenta a autorresponsabilidade como uma ferramenta
+                  essencial para alcançar metas pessoais e profissionais,
+                  superando obstáculos e eliminando desculpas. Com uma abordagem
+                  prática, o livro oferece estratégias e exercícios para ajudar
+                  os leitores a desenvolverem uma mentalidade proativa,
+                  substituindo crenças limitantes por atitudes fortalecedoras.
+                  Vieira enfatiza que, ao parar de culpar os outros e assumir o
+                  controle de nossas decisões, podemos alcançar resultados
+                  significativos e duradouros. É uma leitura inspiradora para
+                  quem busca crescimento pessoal e deseja assumir o controle do
+                  próprio destino.
+                </p>
+                <p class="card__footer">Paulo Vieira</p>
+              </div>
+            </li>
 
-          <li class="card">
-            <div class="card__content">
-              <h3 class="card__title">
-                A Estrutura e Interpretação de Programas de Computador (SICP, na sigla em inglês)
-              </h3>
-              <p class="card__text">
-                Esse é um dos melhores livros para aprender os fundamentos da
-                programação. Destacado pelo MIT em um de seus cursos fundamentais de
-                programação, SICP é um livro de programação de uso geral
-                que utiliza Scheme para ilustrar diversos conceitos de programação.
-              </p>
-              <p class="card__footer">
-                Harold Abelson, Gerald Jay Sussman, Julie Sussman
-              </p>
-            </div>
-          </li>
+            <li class="card">
+              <div class="card__content">
+                <h3 class="card__title">O Homem Mais Rico da Babilônia</h3>
+                <p class="card__text">
+                  Um clássico sobre educação financeira que utiliza parábolas
+                  ambientadas na antiga Babilônia para ensinar princípios
+                  atemporais de gestão de dinheiro. O livro aborda temas como
+                  poupar pelo menos 10% da renda, investir com sabedoria, evitar
+                  dívidas desnecessárias e buscar conhecimento financeiro. Com
+                  histórias cativantes, ele inspira os leitores a adotar hábitos
+                  que levam à prosperidade e segurança financeira. É uma leitura
+                  prática e motivadora para quem deseja melhorar sua relação com
+                  o dinheiro!
+                </p>
+                <p class="card__footer">George S. Clason</p>
+              </div>
+            </li>
 
-          <li class="card">
-            <div class="card__content">
-              <h3 class="card__title">
-                O Codificador Limpo: Um Código de Conduta para Programadores Profissionais
-              </h3>
-              <p class="card__text">
-                Compilado pelo experiente desenvolvedor de software e autor Robert C.
-                Martin (também conhecido como Tio Bob), esse livro aborda as
-                técnicas e ferramentas da verdadeira capacidade do software. Explica
-                como escrever um código limpo e demonstrar como cultivar a
-                atitude de um programador competente e profissional.
-              </p>
-              <p class="card__footer">Steve McConnell</p>
-            </div>
-          </li>
+            <li class="card">
+              <div class="card__content">
+                <h3 class="card__title">M de Martín</h3>
+                <p class="card__text">
+                  Uma obra infantil encantadora que narra a história de Martín,
+                  um urso de pelúcia que decide sair de sua zona de conforto e
+                  embarcar em uma aventura emocionante: ir à escola. Cansado de
+                  ficar parado, Martín quer aprender e interagir com outras
+                  crianças, explorando o mundo além do ambiente familiar. O
+                  livro aborda temas como o crescimento, a coragem de enfrentar
+                  o desconhecido e a transição do lar para o ambiente escolar. A
+                  narrativa destaca as expectativas, os medos e as descobertas
+                  que acompanham essa fase tão importante da infância. Martín,
+                  com sua personalidade única e seu charme, simboliza a jornada
+                  de muitas crianças que dão os primeiros passos em direção à
+                  independência e ao aprendizado. Com ilustrações vibrantes de
+                  Roswitha Grisi Huber, a história ganha vida, capturando a
+                  imaginação dos pequenos leitores. Além disso, o livro convida
+                  os adultos a revisitarem suas próprias memórias de infância,
+                  relembrando os desafios e as conquistas dessa etapa formativa.
+                  É uma obra que celebra a curiosidade, a amizade e a
+                  importância de sonhar, tornando-se uma leitura cativante tanto
+                  para crianças quanto para pais e educadores.
+                </p>
+                <p class="card__footer">Verónica Linares</p>
+              </div>
+            </li>
 
-          <li class="card">
-            <div class="card__content">
-              <h3 class="card__title">
-                Code Complete: Um Manual Prático de Construção de Software
-              </h3>
-              <p class="card__text">
-                Quer saber como escrever um código robusto, independentemente
-                da arquitetura por trás da linguagem de programação escolhida? Em seguida,
-                considere a leitura do livro: Code Complete: Um Manual Prático de Construção de Software.
-                Construção. Ele aborda de forma abrangente tudo relacionado à
-                boa estrutura de código.
-              </p>
-              <p class="card__footer">Steve McConnell</p>
-            </div>
-          </li>
-        </ul>-->
+            <li class="card">
+              <div class="card__content">
+                <h3 class="card__title">En busca de un caballito de mar</h3>
+                <p class="card__text">
+                  História emocionante que acompanha três irmãos – Salomé,
+                  Sabina e Simón – que vivem na cidade de La Paz e sonham em
+                  encontrar um caballito de mar de sete cores. Motivados por
+                  esse desejo, eles embarcam em uma jornada cheia de aventuras,
+                  explorando lugares e enfrentando desafios enquanto buscam
+                  realizar esse sonho. A narrativa aborda temas como a
+                  importância dos sonhos, a união familiar e a superação de
+                  dificuldades. Salomé, a irmã mais velha, tem uma conexão
+                  especial com essa busca, que está ligada às memórias de seu
+                  pai, que partiu em busca do mar. A história combina elementos
+                  de fantasia e realidade, criando uma mensagem universal sobre
+                  esperança e perseverança.
+                </p>
+                <p class="card__footer">Verónica Linares</p>
+              </div>
+            </li>
+          </ul>
         </section>
       </main>
     </div>
